main/static/styles/main.css
/* ... */
.ritual input {
    box-sizing: border-box;
    width: 100%;
    min-height: 34px;
    padding: 6px 8px;
    font-size: 16px;
    line-height: 20px;
    vertical-align: middle;
    background-color: #fff;
    border: 1px solid #d1d5da;
    box-shadow: none;
    border-radius: 3px;
}

.ritual input[type="submit"] {
    cursor: pointer;
    margin-top: 15px;
    background: #ffa918;
    color: #fff;
    border: none;
}

.ritual input[type="submit"]:hover {
    background: #fe9f00;
}

.ritual-body {
    box-sizing: border-box;
    width: 340px;
    padding: 20px;
    background-color: #fff;
    border: 1px solid #d8dee2;
    border-radius: 2px;
    margin: auto;
    line-height: 1.4;
}

.ritual-notice {
    color: #696969;
    margin-bottom: 20px;
}

.ritual-alert {
    box-sizing: border-box;
    width: 340px;
    margin: auto;
    padding: 15px 20px;
    text-align: center;
    border: 1px solid #d8dee2;
    border-radius: 2px;
    margin-bottom: 16px;
    font-size: 14px;
    line-height: 1.4;
}

.ritual-form-explain {
    margin-top: 16px;
    font-size: 12px;
    color: #aab7c4;
    line-height: 1.3;
}

.loader,
.loader:after {
    border-radius: 50%;
    width: 30px;
    height: 30px;
}

.loader {
    margin: 60px auto;
    font-size: 5px;
    position: relative;
    text-indent: -9999em;
    border-top: 6px solid rgba(255, 169, 24, 0.2);
    border-right: 6px solid rgba(255, 169, 24, 0.2);
    border-bottom: 6px solid rgba(255, 169, 24, 0.2);
    border-left: 6px solid #ffa918;
    transform: translateZ(0);
    animation: loading 0.9s infinite linear;
}

@keyframes loading {
    0% {
        transform: rotate(0deg);
    }
    100% {
        transform: rotate(360deg);
    }
}

.addition {
    max-width: 400px;
    padding-left: 10px;
    padding-right: 10px;
    margin: auto auto 100px;
}

.addition h1 {
    font-size: 32px;
    text-align: center;
    margin-top: 32px;
    margin-bottom: 16px;
}

.addition-form {
    margin-top: 48px;
}

.addition-label {
    font-size: 16px;
    font-weight: 500;
    display: block;
    margin-top: 16px;
    margin-bottom: 2px;
}

.addition-input[type="text"],
.addition-input[type="email"] {
    box-sizing: border-box;
    width: 100%;
    min-height: 34px;
    padding: 7px;
    margin-top: 5px;
    margin-bottom: 5px;
    font-size: 16px;
    line-height: 20px;
    vertical-align: middle;
    background-color: #fff;
    border: 1px solid #d1d5da;
    border-radius: 2px;
    -webkit-appearance: none;
}

.addition-input[type="text"]::placeholder,
.addition-input[type="email"]::placeholder {
    color: #bbb;
}

.addition-textarea {
    box-sizing: border-box;
    width: 100%;
    padding: 7px;
    margin-top: 5px;
    margin-bottom: 5px;
    font-size: 16px;
    line-height: 20px;
    background-color: #fff;
    border: 1px solid #d1d5da;
    border-radius: 2px;
}

.addition-input[type="submit"] {
    display: flex;
    margin-left: auto;
    margin-top: 50px;
    cursor: pointer;
    padding: 10px 30px;
    border-radius: 3px;
    background: #ffa918;
    color: #fff;
    border: none;
}

.addition-input[type="submit"]:hover {
    background: #fe9f00;
}

.addition-input-center[type="submit"] {
    cursor: pointer;
    display: flex;
    margin-left: auto;
    margin-right: auto;
    margin-top: 16px;
    padding: 10px 30px;
    border-radius: 3px;
    background: #ffa918;
    color: #fff;
    border: none;
    transition: all 0.15s ease-in-out;
    box-shadow: 0 4px 6px rgba(50, 50, 93 , 0.1);
}

.addition-input-center[type="submit"]:hover {
    background: #fe9f00;
    box-shadow: 0 4px 6px rgba(50, 50, 93, 0.1), 2px 2px 6px rgba(43, 45, 80, 0.2);
}

.addition-subtitle {
    text-align: center;
}

.addition-more {
    cursor: pointer;
    color: #ffa918;
    display: inline-block;
    margin-top: 8px;
}

.addition-more:hover {
    text-decoration: underline;
}

.people {
    max-width: 1000px;
    margin: auto;
    padding-left: 10px;
    padding-right: 10px;
}

.people-title {
    display: flex;
    border-bottom: 1px solid #e4e6e8;
    flex-wrap: wrap;
}

.people-title-invite {
    cursor: pointer;
    margin-top: 16px;
    margin-bottom: 16px;
    margin-left: 16px;
    padding: 10px 15px;
    border-radius: 3px;
    background: #ffa918;
    color: #fff;
    border: none;
    display: flex;
    align-self: center;
    transition: all 0.15s ease-in-out;
    box-shadow: 0 4px 6px rgba(50, 50, 93 , 0.1);
}

.people-title-invite:hover {
    background: #fe9f00;
    box-shadow: 0 4px 6px rgba(50, 50, 93, 0.1), 2px 2px 6px rgba(43, 45, 80, 0.2);
}

.people-title-announce {
    cursor: pointer;
    margin-top: 16px;
    margin-bottom: 16px;
    margin-left: auto;
    padding: 8px 13px;
    border: 2px solid #0d9086;
    border-radius: 3px;
    color: #0d9086;
    border-radius: 3px;
    display: flex;
    align-self: center;
    transition: all 0.15s ease-in-out;
    box-shadow: 0 4px 6px rgba(50, 50, 93 , 0.1);
}

.people-title-invite:hover {
    box-shadow: 0 4px 6px rgba(50, 50, 93, 0.1), 2px 2px 6px rgba(43, 45, 80, 0.2);
}

.people h1 {
    margin-bottom: 16px;
}

.people h2 {
    font-size: 26px;
    color: #ffa918;
    text-align: center;
    margin-top: 0;
    margin-bottom: 30px;
}

.people-grid {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-column-gap: 34px;
    grid-row-gap: 22px;
    margin-top: 32px;
}
@media (max-width: 800px) {
    .people-grid {
        grid-template-columns: 1fr 1fr;
    }
}
@media (max-width: 550px) {
    .people-grid {
        grid-template-columns: 1fr;
    }
}

.people-grid-item {
    display: flex;
    justify-content: space-between;
    border: 1px solid #ffa918;
    border-radius: 2px;
    padding: 20px 24px;
}

.people-grid-item-text {
    margin-bottom: 10px;
}

.people-grid-item-text-name {
    font-size: 18px;
    margin-bottom: 6px;
}

.people-grid-item-text-role {
    color: #828282;
    font-size: 14px;
}

.people-grid-item-photo > img {
    border-radius: 50%;
}
/* ... */

